<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alvarenga.basketballcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_text"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/ScoreQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_quantity"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/Score1"
                android:textSize="48sp"/>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/Button1"
                android:layout_below="@+id/ScoreQ"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="18dp"
                android:text="@string/point_plus"/>

        </RelativeLayout>
        <RelativeLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <View
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:background="#000"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:id="@+id/Score11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_text"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/ScoreQT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_quantity"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/Score11"
                android:textSize="48sp"/>

           <!-- <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Button03"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:id="@+id/button0004"
                android:text="@string/point4_adv"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Button02"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:id="@+id/Button03"
                android:text="@string/point3_40"/>

            <Button
                android:id="@+id/Button02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/Button01"
                android:layout_alignStart="@+id/Button01"
                android:layout_below="@+id/Button01"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:text="@string/point2_30"/>-->
            <!--For 4 buttons use (15, 30, 40 and adv)-->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/Button01"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="18dp"
                android:text="@string/point_plus"
                android:layout_below="@+id/ScoreQT"/>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:gravity="center"
            android:id="@+id/Won"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:text="Set"
                android:textSize="24sp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/set_1"
                android:textSize="24sp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/set_2"
                android:textSize="24sp"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/set_3"
                android:textSize="24sp"
                android:gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:text="@string/jugador_1"
                android:textSize="24sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/J1S1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textSize="24sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/J1S2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textSize="24sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/J1S3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textSize="24sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView

                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:text="@string/jugador_2"
                android:textSize="24sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/J2S1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textSize="24sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/J2S2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textSize="24sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/J2S3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textSize="24sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/ButtonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/reset_button"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Powered By: Rodrigo Alejandro Alvarenga Pérez 00017316"
            android:gravity="top"/>
    </LinearLayout>



</LinearLayout>
